--- a/arch/x86/configs/android-x86_defconfig
+++ b/arch/x86/configs/android-x86_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 3.10.2 Kernel Configuration
+# Linux/x86 3.10.8 Kernel Configuration
 #
 # CONFIG_64BIT is not set
 CONFIG_X86_32=y
@@ -217,6 +217,7 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
+CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
 CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_MIXED_BREAKPOINTS_REGS=y
@@ -309,7 +310,7 @@ CONFIG_X86_EXTENDED_PLATFORM=y
 CONFIG_X86_WANT_INTEL_MID=y
 CONFIG_X86_INTEL_MID=y
 CONFIG_X86_MDFLD=y
-# CONFIG_X86_INTEL_LPSS is not set
+CONFIG_X86_INTEL_LPSS=y
 # CONFIG_X86_RDC321X is not set
 CONFIG_X86_32_NON_STANDARD=y
 # CONFIG_X86_NUMAQ is not set
@@ -436,7 +437,7 @@ CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 CONFIG_CLEANCACHE=y
-# CONFIG_FRONTSWAP is not set
+CONFIG_FRONTSWAP=y
 CONFIG_HIGHPTE=y
 # CONFIG_X86_CHECK_BIOS_CORRUPTION is not set
 CONFIG_X86_RESERVE_LOW=64
@@ -446,7 +447,7 @@ CONFIG_MTRR=y
 CONFIG_X86_PAT=y
 CONFIG_ARCH_USES_PG_UNCACHED=y
 CONFIG_ARCH_RANDOM=y
-CONFIG_X86_SMAP=y
+# CONFIG_X86_SMAP is not set
 CONFIG_EFI=y
 CONFIG_EFI_STUB=y
 CONFIG_SECCOMP=y
@@ -491,6 +492,7 @@ CONFIG_PM_DEBUG=y
 CONFIG_PM_SLEEP_DEBUG=y
 CONFIG_PM_TRACE=y
 CONFIG_PM_TRACE_RTC=y
+CONFIG_PM_CLK=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_ACPI=y
 CONFIG_ACPI_SLEEP=y
@@ -1105,6 +1107,7 @@ CONFIG_RFKILL_PM=y
 CONFIG_RFKILL_LEDS=y
 CONFIG_RFKILL_INPUT=y
 # CONFIG_RFKILL_REGULATOR is not set
+# CONFIG_RFKILL_GPIO is not set
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
@@ -1336,6 +1339,7 @@ CONFIG_SENSORS_LIS3LV02D=m
 CONFIG_AD525X_DPOT=m
 CONFIG_AD525X_DPOT_I2C=m
 # CONFIG_AD525X_DPOT_SPI is not set
+# CONFIG_ATMEL_PWM is not set
 # CONFIG_DUMMY_IRQ is not set
 # CONFIG_IBM_ASM is not set
 # CONFIG_PHANTOM is not set
@@ -2290,6 +2294,7 @@ CONFIG_KEYBOARD_GPIO=m
 # CONFIG_KEYBOARD_MPR121 is not set
 # CONFIG_KEYBOARD_NEWTON is not set
 # CONFIG_KEYBOARD_OPENCORES is not set
+# CONFIG_KEYBOARD_SAMSUNG is not set
 # CONFIG_KEYBOARD_STOWAWAY is not set
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
@@ -2418,6 +2423,7 @@ CONFIG_TOUCHSCREEN_TOUCHIT213=m
 CONFIG_TOUCHSCREEN_TSC_SERIO=m
 CONFIG_TOUCHSCREEN_TSC2005=m
 CONFIG_TOUCHSCREEN_TSC2007=m
+# CONFIG_TOUCHSCREEN_W90X900 is not set
 CONFIG_TOUCHSCREEN_ST1232=m
 CONFIG_TOUCHSCREEN_TPS6507X=m
 CONFIG_INPUT_MISC=y
@@ -2539,8 +2545,10 @@ CONFIG_HW_RANDOM=m
 CONFIG_HW_RANDOM_TIMERIOMEM=m
 CONFIG_HW_RANDOM_INTEL=m
 CONFIG_HW_RANDOM_AMD=m
+# CONFIG_HW_RANDOM_ATMEL is not set
 CONFIG_HW_RANDOM_GEODE=m
 CONFIG_HW_RANDOM_VIA=m
+# CONFIG_HW_RANDOM_EXYNOS is not set
 CONFIG_NVRAM=m
 # CONFIG_DTLK is not set
 # CONFIG_R3964 is not set
@@ -2618,6 +2626,7 @@ CONFIG_I2C_SCMI=m
 # I2C system bus drivers (mostly embedded / system-on-chip)
 #
 # CONFIG_I2C_CBUS_GPIO is not set
+# CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 # CONFIG_I2C_DESIGNWARE_PCI is not set
 # CONFIG_I2C_EG20T is not set
 CONFIG_I2C_GPIO=y
@@ -3389,6 +3398,8 @@ CONFIG_VIDEO_VIA_CAMERA=m
 CONFIG_VIDEO_TIMBERDALE=m
 CONFIG_SOC_CAMERA=m
 CONFIG_SOC_CAMERA_PLATFORM=m
+# CONFIG_VIDEO_SH_MOBILE_CSI2 is not set
+# CONFIG_VIDEO_SH_MOBILE_CEU is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 CONFIG_V4L_TEST_DRIVERS=y
 CONFIG_VIDEO_VIVI=m
@@ -3530,6 +3541,7 @@ CONFIG_VIDEO_NOON010PC30=m
 CONFIG_VIDEO_M5MOLS=m
 CONFIG_VIDEO_S5K6AA=m
 CONFIG_VIDEO_S5K4ECGX=m
+# CONFIG_VIDEO_SMIAPP is not set
 # CONFIG_VIDEO_S5C73M3 is not set
 
 #
@@ -4143,6 +4155,7 @@ CONFIG_SND_VXPOCKET=m
 CONFIG_SND_PDAUDIOCF=m
 CONFIG_SND_SOC=m
 CONFIG_SND_ATMEL_SOC=m
+# CONFIG_SND_DESIGNWARE_I2S is not set
 CONFIG_SND_MFLD_MACHINE=m
 CONFIG_SND_SST_PLATFORM=m
 CONFIG_SND_SOC_I2C_AND_SPI=m
@@ -4591,6 +4604,8 @@ CONFIG_MMC_SDHCI_PCI=y
 # CONFIG_MMC_RICOH_MMC is not set
 CONFIG_MMC_SDHCI_ACPI=m
 CONFIG_MMC_SDHCI_PLTFM=y
+# CONFIG_MMC_SDHCI_PXAV3 is not set
+# CONFIG_MMC_SDHCI_PXAV2 is not set
 CONFIG_MMC_WBSD=m
 CONFIG_MMC_TIFM_SD=m
 CONFIG_MMC_SDRICOH_CS=m
@@ -4623,6 +4638,7 @@ CONFIG_LEDS_GPIO=m
 # CONFIG_LEDS_INTEL_SS4200 is not set
 # CONFIG_LEDS_LT3593 is not set
 # CONFIG_LEDS_DELL_NETBOOKS is not set
+# CONFIG_LEDS_RENESAS_TPU is not set
 # CONFIG_LEDS_TCA6507 is not set
 # CONFIG_LEDS_LM355x is not set
 # CONFIG_LEDS_OT200 is not set
@@ -4978,6 +4994,7 @@ CONFIG_SBYPASS=m
 CONFIG_BPCTL=m
 CONFIG_CED1401=m
 # CONFIG_DGRP is not set
+# CONFIG_ZCACHE is not set
 CONFIG_USB_DWC2=m
 # CONFIG_USB_DWC2_DEBUG is not set
 # CONFIG_USB_DWC2_TRACK_MISSED_SOFS is not set
@@ -5036,6 +5053,15 @@ CONFIG_INTEL_OAKTRAIL=m
 CONFIG_SAMSUNG_Q10=m
 CONFIG_APPLE_GMUX=m
 # CONFIG_PVPANIC is not set
+CONFIG_CLKDEV_LOOKUP=y
+CONFIG_HAVE_CLK_PREPARE=y
+CONFIG_COMMON_CLK=y
+
+#
+# Common Clock Framework
+#
+# CONFIG_COMMON_CLK_DEBUG is not set
+# CONFIG_COMMON_CLK_SI5351 is not set
 
 #
 # Hardware Spinlock drivers
